--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "eslint-plugin-react-native": "^3.6.0",
+    "expr-eval": "^2.0.2",
     "prop-types": "^15.6.2",
     "qs": "^6.6.0",
     "react": "16.8.3",
@@ -25,10 +26,10 @@
     "redux-saga": "^0.16.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
     "@babel/core": "^7.4.5",
     "@babel/runtime": "^7.4.5",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-flowtype": "^3.2.1",
